* Use $_SERVER instead of $HTTP_SERVER_VARS
* Add a drop down menu with existing groups in group_new.php3
* Check for sql in show_groups.php3
* In lib/sql/group_info.php3 if $login is not set, find available groups and place them in
  $existing_groups along with a count of users per group. Use the functionality in group_new.php3
  and show_groups.php3
* Update TODO
Ver 1.72:
* Move the xlat function to a separate file in lib/xlat.php3
* Add a lib/sql/nas_list.php3 to also get the nas list from sql (naslist.conf still works)
* add realms nasdb and nasadmin in username.mappings. nasadmin is used to signify if the
  user is allowed to use the nas_admin page. nasdb is used to shorten the nas list to only
  a few specific entries. That way administrator responsible for a few access servers will
  only be able to administer those access servers and not see the rest of the nas list.
* Add username searching in the find page as suggested by joram agten
* Don't use nas_list in nas_admin
* Add postgresql specific sql schema by apellido jr., wilfredo p. Move each sql schema to a
  separate directory (mysql and postgresql)
* Change is_int to is_numeric. This closes Bug #90
* Escape special characters in the sql password. This closes bug #96
* Do an xlat for general_accounting_attrs_file and general_user_edit_attrs_file. That way we can
  have different mappings for each administrator.
* Use require_once instead of require when including xlat.php3
* Add debug statements in sql connect functions
* Add a missing.php3 file with functions that may be missing from the PHP version used. Include it
  if a function is missing. Currently only array_change_key_case() is included
* Set general_restrict_nasadmin_access to no by default. It causes confusion.
* Set the general_username_mappings_file variable
* Fix a small error in lib/sql/find.php3. This closes bug #103
* Add a small note in the FAQ about checking for sql/ldap driver availability in PHP if the user get's